--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             Location
         </div>
         <div class="page" id="scan">
-            
+            Scan Please
         </div>
     </div>
     <div class="navbar">
