--- a/index.html
+++ b/index.html
@@ -15,6 +15,32 @@
 </head>
 <body>
     <div class="page-container">
+        <div class="page" id="learn-more">
+            <h4>Welcome to</h4>
+            <h1>CompostLah</h1>
+            <p>Turn some of your food waste into a greener future for Singapore!</p>
+            <input type="button" value="Learn More">
+        </div>
+        <div class="page" id="onboarding">
+            <div id="msg-1" class="content">
+                <img src="" alt="Location">
+                <h1>CompostLah</h1>
+                <p>Bin <span>Location</span></p>
+                <p>Map feature that shows you the available bins around you</p>
+            </div>
+            <div id="msg-2" class="content">
+                <img src="" alt="Rewards">
+                <h1>Rewards</h1>
+                <p>Through <span>Contributions</span></p>
+                <p>Get rewarded for helping and lead Singapore into a greener future</p>
+            </div>
+            <div id="msg-3" class="content">
+                <img src="" alt="QR">
+                <h1>QR Code</h1>
+                <p>Scan to <span>Update</span></p>
+                <p>Scan the QR Code on the bin to unlock it then deposit your food waste</p>
+            </div>
+        </div>
         <div class="page" id="profile">
             Profile
         </div>
