--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <script src="js/vendor/jquery-3.4.1.min.js"></script>
 	<script src="js/vendor/qr_packed.js"></script>
     <script src="js/vendor/hammer.min.js"></script>
-    <script src="js/vendor/leaflet.js"></script>
 	<script src="js/page.js"></script>
 	<script src="js/swipe.js"></script>
     <script src="js/store.js"></script>
-    <script src="js/scanner.js"></script>
+	<script src="js/scanner.js"></script>
+	<script src="js/map.js"></script>
 	<script src="js/main.js" async></script>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i|Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -149,7 +149,7 @@
         </div>
         <div id="location" class="page">
             <h1>Nearby <span class="gr">Bins</span></h1>
-            <div class="map"></div>
+            <div id="map"></div>
         </div>
     </div>
     <div class="nav">
@@ -165,6 +165,7 @@
                 </div>
             </li>
         </ul>
-    </div>
+	</div>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMbjQEfXPyudWhACUqxxW831YSSkPHa_s&callback=mapInit" async></script>
 </body>
 </html>
