finish the bin bug

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 						<h3>$10 Cash Voucher</h3>
 						<p>Redeem from <span>NTUC</span></p>
 					</div>
-					<div>1.0kg</div>
+					<div class="redeem-text">1.0kg</div>
 				</div>
 				<div class="reward-cont">
 					<img src="image/svg/reward.svg" alt="present">
@@ -126,7 +126,7 @@
 						<h3>$20 Cash Voucher</h3>
 						<p>Redeem from <span>NTUC</span></p>
 					</div>
-					<div>2.0kg</div>
+					<div class="redeem-text">2.0kg</div>
 				</div>
 				<div class="reward-cont">
 					<img src="image/svg/reward.svg" alt="present" />
@@ -134,7 +134,7 @@
 						<h3>$30 Cash Voucher</h3>
 						<p>Redeem from <span>NTUC</span></p>
 					</div>
-					<div>3.0kg</div>
+					<div class="redeem-text">3.0kg</div>
 				</div>
 				<div class="reward-cont">
 					<img src="image/svg/reward.svg" alt="present" />
@@ -142,7 +142,7 @@
 						<h3>$40 Cash Voucher</h3>
 						<p>Redeem from <span>NTUC</span></p>
 					</div>
-					<div>4.0kg</div>
+					<div class="redeem-text">4.0kg</div>
 				</div>
 				<div class="reward-cont">
 					<img src="image/svg/reward.svg" alt="present" />
@@ -150,7 +150,7 @@
 						<h3>$50 Cash Voucher</h3>
 						<p>Redeem from <span>NTUC</span></p>
 					</div>
-					<div>5.0kg</div>
+					<div class="redeem-text">5.0kg</div>
 				</div>
 			</div>
         </div>
@@ -168,7 +168,7 @@
 			</div>
 		</div>
 		<div id="deposit" class="page">
-			<p>You have deposited <h1 class="gr">0.1KG</h1> at Foodgle Hub</p>
+			<p>You have deposited <h1 class="gr weight">0.1KG</h1> at <span class="location">Foodgle Hub</span></p>
 			<br><br>
 			<p>Thank you for your contribution!</p>
 		</div>
