--- a/index.html
+++ b/index.html
@@ -187,6 +187,12 @@
             </li>
         </ul>
 	</div>
+	<div class="sec-nav">
+		<a href="https://nwncorner.club/compostlah"><img src="image/svg/tutorial.svg"/>Tutorial</a>
+		<a href="#signout"><img src="image/svg/signout.svg"/>Sign Out</a>
+	</div>
+	<div class="sec-nav-opacity"></div>
+
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMbjQEfXPyudWhACUqxxW831YSSkPHa_s&callback=mapInit" async></script>
 </body>
 </html>
